--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,6 +1,7 @@
 .main-footer {
   width: 100%;
   background-color: #121212;
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .brand-logo {
@@ -12,6 +13,7 @@
 
 .footer-text {
   color: #aaa;
+  font-family: var(--font-family-base);
 }
 
 .footer-links li {
@@ -23,8 +25,9 @@
   text-decoration: none;
   font-weight: 500;
   transition: color 0.2s;
+  font-family: var(--font-family-base);
 }
 
 .footer-link:hover {
-  color: #cddc39;
+  color: var(--primary-color);
 }
