--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,6 +9,8 @@
   padding-left: 0;
   padding-right: 0;
   margin: 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  font-family: var(--font-family-base);
 }
 
 .brand-logo {
@@ -30,8 +32,8 @@
 
 .btn-login {
   background-color: transparent;
-  border: 2px solid #cddc39;
-  color: #cddc39;
+  border: 2px solid var(--primary-color);
+  color: var(--primary-color);
   border-radius: 50px;
   padding: 6px 16px;
   font-weight: 600;
@@ -40,7 +42,7 @@
 
 .btn-login:hover,
 .btn-login:focus {
-  background-color: #cddc39;
+  background-color: var(--primary-color);
   color: #222;
   text-decoration: none;
   border-color: #afb42b;
@@ -49,8 +51,8 @@
 
 .btn-register {
   background-color: transparent;
-  border: 2px solid #cddc39;
-  color: #cddc39;
+  border: 2px solid var(--primary-color);
+  color: var(--primary-color);
   border-radius: 50px;
   padding: 6px 16px;
   font-weight: 600;
@@ -58,9 +60,9 @@
 }
 
 .btn-register:hover , .btn-login:hover{
-  background-color: #cddc39;
+  background-color: var(--primary-color);
   color: #000;
-  box-shadow: 0 0 10px #cddc39;
+  box-shadow: 0 0 10px var(--primary-color);
 }
 
 .search-icon {
@@ -99,7 +101,7 @@
   }
 
   .navbar-nav .nav-link {
-    color: #cddc39;
+    color: var(--primary-color);
     font-weight: bold;
     padding: 0.5rem 1rem;
   }
@@ -117,7 +119,7 @@
   }
 
   .navbar-toggler {
-    border: 2px solid #cddc39;
+    border: 2px solid var(--primary-color);
     border-radius: 8px;
   }
 
@@ -126,7 +128,7 @@
   .navbar-toggler-icon div {
     content: "";
     display: block;
-    background-color: #cddc39;
+    background-color: var(--primary-color);
     height: 3px;
     width: 1.5rem;
     margin: 4px 0;
@@ -178,7 +180,7 @@
 @media (max-width: 991px) {
   .navbar-toggler {
     margin-left: auto;
-    border: 2px solid #cddc39;
+    border: 2px solid var(--primary-color);
     border-radius: 8px;
   }
 
