--- a/src/app/sections/account/account.component.css
+++ b/src/app/sections/account/account.component.css
@@ -4,6 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  font-family: var(--font-family-base);
   align-items: center;      /* Centra horizontalmente */
   justify-content: center;  /* Centra verticalmente */
   text-align: center;
@@ -37,8 +38,8 @@
 
 /* Botones lime */
 .btn-lime-outline {
-  color: #cddc39;
-  border: 2px solid #cddc39;
+  color: var(--primary-color);
+  border: 2px solid var(--primary-color);
   background-color: transparent;
   border-radius: 30px;
   padding: 0.5rem 1.5rem;
@@ -49,13 +50,13 @@
 }
 
 .btn-lime-outline:hover {
-  background-color: #cddc39;
+  background-color: var(--primary-color);
   color: #000;
   text-decoration: none;
 }
 
 .coin-icon {
-  color: #cddc39;
+  color: var(--primary-color);
   font-size: 1.3rem;
   vertical-align: middle;
   margin-right: 0.3rem;
