--- a/src/app/sections/categories/categories.component.css
+++ b/src/app/sections/categories/categories.component.css
@@ -9,7 +9,7 @@
   padding-top: 3rem;
   background-color: #1a1a1a;
   min-height: 100vh;
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 /* TÍTULOS GENERALES */
@@ -18,8 +18,11 @@
   font-size: 2rem;
   font-weight: bold;
   color: #cddc39;
-  border-left: 5px solid #cddc39;
   padding-left: 1rem;
+}
+
+.game-title {
+  border-left: 5px solid #cddc39;
 }
 
 /* CENTRADO DE FILTROS POR JUEGO */
@@ -212,7 +215,7 @@
 .card-league .card-title {
   font-size: 1.15rem;
   font-weight: 600;
-  color: #00ffc8; 
+  color: #00ffc8;
 }
 
 /* Región */
@@ -227,7 +230,7 @@
   display: inline-block;
   border: 1px solid #cddc39;
   color: #cddc39;
-  background-color: transparent !important;  /* ← fuerza eliminar el fondo gris */
+  background-color: transparent !important; /* ← fuerza eliminar el fondo gris */
   font-size: 0.75rem;
   padding: 0.35rem 0.75rem;
   border-radius: 2rem;
@@ -283,7 +286,6 @@
 .card-series .small {
   color: #fff !important;
 }
-
 
 .card-tournament-rich {
   background-color: #1b1b1b;
