--- a/src/app/sections/categories/categories.component.html
+++ b/src/app/sections/categories/categories.component.html
@@ -9,7 +9,7 @@
 
   <section class="section-categories py-5 bg-black">
     <div class="container">
-      <h2 class="section-title mb-5">CATEGORIES</h2>
+      <h2 class="section-title mb-5 text-center">CATEGORIES</h2>
 
       <!-- === League of Legends === -->
       <div class="game-block lol-block position-relative">
