--- a/src/app/sections/home/home.component.html
+++ b/src/app/sections/home/home.component.html
@@ -112,7 +112,7 @@
               <!-- PLAYERS -->
               @if (currentView === 'players') {
               <div class="row g-4">
-                @for (p of players.slice(0,12); track $index) {
+                @for (p of players; track $index) {
                 <div class="col-12 col-md-6">
                   <div class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow-sm h-100">
                     <h5 class="mb-2 text-warning">
@@ -137,6 +137,10 @@
                   </div>
                 </div>
                 }
+              </div>
+              <div class="d-flex justify-content-between mt-3">
+                <button class="btn btn-secondary btn-sm" (click)="changePage('players', -1)" [disabled]="playersPage === 1">Anterior</button>
+                <button class="btn btn-secondary btn-sm" (click)="changePage('players', 1)">Siguiente</button>
               </div>
               }
 
@@ -168,6 +172,10 @@
                   </div>
                 </div>
                 }
+              </div>
+              <div class="d-flex justify-content-between mt-3">
+                <button class="btn btn-secondary btn-sm" (click)="changePage('teams', -1)" [disabled]="teamsPage === 1">Anterior</button>
+                <button class="btn btn-secondary btn-sm" (click)="changePage('teams', 1)">Siguiente</button>
               </div>
               }
 
@@ -215,6 +223,10 @@
               </div>
               }
               }
+              <div class="d-flex justify-content-between mt-3">
+                <button class="btn btn-secondary btn-sm" (click)="changePage('matches', -1)" [disabled]="matchesPage === 1">Anterior</button>
+                <button class="btn btn-secondary btn-sm" (click)="changePage('matches', 1)">Siguiente</button>
+              </div>
               }
             </div>
           </div>
